@@ -1,76 +1,69 @@
 package com.renyigesai.maid_bakeries.item;
 
 import com.renyigesai.maid_bakeries.gui.CraftOrderMenu;
+import com.renyigesai.maid_bakeries.init.MaidBakeriesDataComponents;
 import net.minecraft.ChatFormatting;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.Tag;
+import net.minecraft.core.component.DataComponents;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.network.chat.Component;
+import net.minecraft.resources.Identifier;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.world.*;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.TooltipFlag;
+import net.minecraft.world.item.component.ItemContainerContents;
+import net.minecraft.world.item.component.TooltipDisplay;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.items.ItemStackHandler;
-import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 public class CraftOrderItem extends Item {
-    public  CraftOrderItem(Properties p_41383_) {
-        super(p_41383_);
+    public  CraftOrderItem(Identifier identifier) {
+        super(new Properties().stacksTo(1).component(DataComponents.CONTAINER, ItemContainerContents.EMPTY).component(MaidBakeriesDataComponents.TEXT.get(),"").setId(ResourceKey.create(Registries.ITEM,identifier)));
     }
     public static List<ItemStack> getInventoryList(ItemStack stack){
-        List<ItemStack> stacks = new ArrayList<>();
-        CompoundTag tag = stack.getOrCreateTag();
-        if (tag.contains("Inventory", Tag.TAG_COMPOUND)){
-            ItemStackHandler handler = new ItemStackHandler(3);
-            handler.deserializeNBT(tag.getCompound("Inventory"));
-            for (int i = 0; i < handler.getSlots(); i++) {
-                stacks.add(handler.getStackInSlot(i));
-            }
-        }
-        return stacks;
+        ItemContainerContents itemContainerContents = stack.getOrDefault(DataComponents.CONTAINER,ItemContainerContents.EMPTY);
+        return itemContainerContents.allItemsCopyStream().toList();
     }
 
     public static ItemStack getEnd(ItemStack stack){
         List<ItemStack> inventoryList = getInventoryList(stack);
         if (!inventoryList.isEmpty()){
-            return inventoryList.get(inventoryList.size()-1);
+            return inventoryList.getLast();
         }
         return ItemStack.EMPTY;
     }
 
-    public static List<String> getTypes(ItemStack stack){
-        CompoundTag tag = stack.getOrCreateTag();
-        if (tag.contains("Type", Tag.TAG_STRING)){
-            String input = tag.getString("Type");
-            if (input.isEmpty()) {
+    public static List<String> getTypes(ItemStack stack) {
+        if (stack.has(MaidBakeriesDataComponents.TEXT.get())) {
+            String input = stack.get(MaidBakeriesDataComponents.TEXT.get());
+            if (input == null || input.isEmpty()) {
                 return List.of();
             }
-            String[] parts = input.split("&");
-            return Arrays.asList(parts);
+            // 按 & 分割，并过滤掉空字符串
+            return Arrays.stream(input.split("&"))
+                    .filter(s -> !s.isEmpty())
+                    .collect(Collectors.toList());
         }
         return List.of();
     }
 
     public static int getRepeat(ItemStack stack){
-        CompoundTag tag = stack.getOrCreateTag();
-        if (tag.contains("Repeat", Tag.TAG_INT)){
-            return tag.getInt("Repeat");
-        }
-        return 0;
+        return stack.getOrDefault(MaidBakeriesDataComponents.INT,0);
     }
 
     @Override
-    public InteractionResultHolder<ItemStack> use(Level level, Player player, InteractionHand hand) {
+    public InteractionResult use(Level level, Player player, InteractionHand hand) {
         ItemStack itemInHand = player.getItemInHand(InteractionHand.MAIN_HAND);
         if (itemInHand.is(this) && !getEnd(itemInHand).isEmpty()) {
             player.startUsingItem(hand);
             player.openMenu(getMenuProvider());
-            return new InteractionResultHolder(InteractionResult.SUCCESS, player.getItemInHand(hand));
+            return InteractionResult.SUCCESS;
         }
         return super.use(level, player, hand);
     }
@@ -80,12 +73,12 @@ public class CraftOrderItem extends Item {
     }
 
     @Override
-    public void appendHoverText(ItemStack pStack, @Nullable Level pLevel, List<Component> pTooltip, TooltipFlag pFlag) {
-        ItemStack end = getEnd(pStack);
+    public void appendHoverText(ItemStack itemStack, TooltipContext context, TooltipDisplay display, Consumer<Component> builder, TooltipFlag tooltipFlag) {
+        ItemStack end = getEnd(itemStack);
         if (!end.isEmpty()){
-            pTooltip.add(Component.literal("Result:").withStyle(ChatFormatting.DARK_GRAY));
-            pTooltip.add(Component.translatable(end.getItem().getDescriptionId()).withStyle(ChatFormatting.GOLD));
+            builder.accept(Component.literal("Result:").withStyle(ChatFormatting.DARK_GRAY));
+            builder.accept(Component.translatable(end.getItem().getDescriptionId()).withStyle(ChatFormatting.GOLD));
         }
-        super.appendHoverText(pStack, pLevel, pTooltip, pFlag);
+        super.appendHoverText(itemStack, context, display, builder, tooltipFlag);
     }
 }
